--- a/Download.html
+++ b/Download.html
@@ -64,8 +64,9 @@
 								<p> </p>
 								<li><a href="untitled (11).pdf" class="button">RAPPORT DE SOUTENANCE 2</a></li>
 								<p> </p>
-								<li><a href="FINAL.rar" class="button">JEU (0.1)</a></li>
-
+								<li><a href="GAME.rar" class="button">JEU (0.1)</a></li>
+								<p> </p>
+								<li><a href="FINAL2.rar" class="button">JEU (0.2)</a></li>
 							</section>
 
 					</div>
