--- a/index.html
+++ b/index.html
@@ -59,14 +59,14 @@
 							
 							
 						</header>
-						<span class="image"><img src="images/altLogo.png" alt="" /></span>
+						<span class="image"><img src="images/LG.png" alt="" /></span>
 					</div>
 					<a href="#one" class="goto-next scrolly">Next</a>
 				</section>
 
 			<!-- One -->
 				<section id="one" class="spotlight style1 bottom">
-					<span class="image fit main bottom"><img src="images/altLogo.png" alt="" /></span>
+					<span class="image fit main bottom"><img src="images/LOGO.png" alt="" /></span>
 					<div class="content">
 						<div class="container">
 							<div class="row">
