--- a/galerie.html
+++ b/galerie.html
@@ -51,8 +51,8 @@
 				<div id="main" class="wrapper style1">
 					<div class="container">
 						<header class="major">
-							<h2>Elements</h2>
-							<p>Ipsum dolor feugiat aliquam tempus sed magna lorem consequat accumsan</p>
+							<h2>GALERIE</h2>
+							<p>IMAGE EN JEU</p>
 						</header>
 
 						
@@ -63,7 +63,7 @@
 								<h4>Fit</h4>
 								<div class="box alt">
 									<div class="row 50% uniform">
-										<div class="12u$"><span class="image fit"><img src="images/pic07.jpg" alt="" /></span></div>
+										<div class="12u$"><span class="image fit"><img src="images/LG.png" alt="" /></span></div>
 										<div class="4u  6u(xsmall)"><span class="image fit"><img src="images/1.PNG" alt="" /></span></div>
 										<div class="4u  6u$(xsmall)"><span class="image fit"><img src="images/2.PNG" alt="" /></span></div>
 										<div class="4u$ 6u(xsmall)"><span class="image fit"><img src="images/3.PNG" alt="" /></span></div>
@@ -73,9 +73,7 @@
 										<div class="4u  6u(xsmall)"><span class="image fit"><img src="images/7.PNG" alt="" /></span></div>
 										<div class="4u  6u$(xsmall)"><span class="image fit"><img src="images/8.PNG" alt="" /></span></div>
 										<div class="4u$ 6u(xsmall)"><span class="image fit"><img src="images/9.PNG" alt="" /></span></div>
-										<div class="4u  6u$(xsmall)"><span class="image fit"><img src="images/lobby.png" alt="" /></span></div>
-										<div class="4u  6u(xsmall)"><span class="image fit"><img src="images/pic04.PNG" alt="" /></span></div>
-										<div class="4u$ 6u$(xsmall)"><span class="image fit"><img src="images/pic04.jpg" alt="" /></span></div>
+										<div class="4u  6u(xsmall)"><span class="image fit"><img src="images/lobby.png" alt="" /></span></div>
 									</div>
 								</div>
 
