--- a/index.html
+++ b/index.html
@@ -818,38 +818,75 @@ sendEvent = function(sel, step) {
           <div class="content-text">
             <strong><h2 class="title-description">Plus de 5 000 cours en ligne sont référencés sur la plateforme </h2></strong>
             <p><b>Qu'est-ce
-que c'est&nbsp;?</b><span><br>La
-plateforme <a href="https://www.my-mooc.com/fr" target="_blank" id="ressource-content-website">My Mooc,</a> c’est
-un peu le Tripadvisor des cours en ligne. Des milliers de MOOCs
-(cours en ligne ouverts à tous) sont référencés et évalués par
-les internautes dans différentes langues&nbsp;: de la gestion de
-projet en passant par le bricolage, le développement informatique, le marketing, la comptabilité, la philosophie ou
-même les langues étrangères, etc.</span>
+que c'est&nbsp;?</b><span>ENTREPRISE
+Ubisoft (ENTREPRISE
+Ubisoft (stylisé en UBISOFT, anciennement Ubi Soft Entertainment) est une entreprise française de développement, d'édition et de distribution de jeux vidéo, créée en mars 1986 par les cinq frères Guillemot, originaires de Carentoir en Bretagne.
 
-<br></p>
-            <img class="img-responsive" src="./index_files/My_Mooc_Macs.png" alt="My mooc macs">
-            <p><b>Comment
-ça marche&nbsp;?</b><br>Il
-vous suffit de vous rendre sur le site et de rechercher les cours qui
-vous intéressent à l'aide du moteur de recherche en tapant
-les
-mots-clés correspondant
-ou en utilisant les filtres associés (catégorie, langue, prix,
-etc.). Vous
-retrouverez
-ensuite les
-différentes fiches qui présentent les MOOCs
-disponibles sur le web et
-les avis des utilisateurs qui ont suivi les MOOCs qui vous plaisent
-(plutôt pratique&nbsp;!).<br></p>
-            <img class="img-responsive" src="./index_files/my-mooc-gestion-projet.png" alt="My mooc gestion projet">
-            <p><b>C'est
-pour qui&nbsp;?</b><br>Pour
-toute personne en quête d’une formation en ligne.<b><br><br>Combien
-ça coûte&nbsp;?</b><span><br>L'utilisation
-de la plateforme est 100% gratuite
-(et sans publicité)&nbsp;! Certains MOOCs
-proposés sont gratuits et d'autres payants.</span>
+MISSION
+
+Sopra Steria, fort de 40 000 collaborateurs dans plus de 20 pays, propose l'un des portefeuilles d'offres les plus complets du marché : conseil, intégration de systèmes, édition de solutions métier, infrastructure management et business process services.
+En forte croissance, le Groupe accueillera 2 600 talents en 2017 pour participer à ses projets d'envergure sur l'ensemble de ses métiers.
+
+Secteur : Indifférent
+Fonction : Informatique
+Démarrage : Septembre
+Durée : Supérieure à 3 mois
+Type de contrat : Contrat de professionnalisation
+Rémunération : Plus de 800 Euros
+
+Vous aussi, rejoignez-nous et participez au monde numérique de demain ! 
+
+Le secteur des Télécommunications, Médias et Gambling se situe au coeur des transformations digitales. Leader sur ce marché, Sopra Steria adresse les enjeux de ses clients sur des domaines applicatifs complets, et les accompagne par la création de services innovants.
+
+
+Les programmeurs gameplay et IA sont les garants de toutes les interactions du jeu : ce sont eux qui font le lien entre le joueur, la manette et ce qui apparaît à l’écran. Leur mission : s’assurer que tous les systèmes (jouables et non-jouables) interagissent entre eux de manière fluide et convaincante.
+
+Ils traduisent des idées créatives en séquences de jeu de qualité, et travaillent en collaboration étroite avec les designers, les artistes, les animateurs et les autres membres des équipes de développement pour offrir aux joueurs une expérience de jeu toujours plus fun, agréable et immersive.
+
+
+Dans le cadre de la mission, vous devrez ainsi :
+
+Comprendre les enjeux et architectures du moteur de jeu
+Développer deux cube
+Participer à l'ensemble des activités de modélisation
+Participer aux projets de migrations technologiques du moteur Anvil, le moteur de notre entreprise
+
+
+Intérêt de l’alternance :
+
+Découverte de la méthodologie de mise en oeuvre d'un projet
+Acquisition des compétences techniques autour des solutions binaire
+Assimilation de la démarche et des processus de modelisation
+Appréhension de la dimension sécurité inhérente aux projets de gestion de données d'un jeu en multi-joueur
+Travail en équipe
+
+
+Environnement technologique/fonctionnel :
+
+Microsoft, Linux
+
+Environnement humain :
+
+Vous serez intégré(e) au sein d'une équipe projet de 6 personnes dédiée aux développements d'un jeu en 3D sortant dans un futur proche.
+
+Vous serez encadré(e) par le leader technique du projet et réaliserez le reporting de l'avancement de vos activités au chef de projet.
+
+Le profil recherché: 
+
+En première année d'école d'Ingénieurs ou de Master 2 Informatique
+Vous avez la capacité à acquérir rapidement de nouvelles connaissances techniques et fonctionnelles
+Vous êtes curieux (se) et avez un bon relationnel
+Vous avez un attrait pour les solutions Big Data / Décisionnelles
+Vous avez un esprit de synthèse et d'analyse. Anglais courant et techniques de programmation
+
+Exemples de missions : programmer la physique des wingsuits dans STEEP, développer un système de permutation des véhicules dans Ghost Recon Wildlands, travailler sur le comportement des armes pour un projet non annoncé, etc.
+
+PROFIL RECHERCHÉ
+Pour mener à bien cette mission, il est souhaitable que vous ayez un niveau d'étude au minimum Bac.
+
+Le permis voiture n'est pas indispensable.
+
+Img 20160615 160532 Partagé par Oswald Benoit</span>
 
 <br></p>
           </div>
@@ -863,7 +900,7 @@ proposés sont gratuits et d'autres payants.</span>
             <p>
                 <img class="img-circle" src="./index_files/IMG_20160615_160532.jpg" alt="Img 20160615 160532">
               Partagé par
-                Charlotte Cady
+                Oswald Benoit
             </p>
           </div>
           <!-- Go to www.addthis.com/dashboard to customize your tools -->
